platform-infra/clusters/prodlike/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: env-prodlike-api-ingress
  namespace: env-prodlike
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`env-prodlike.appfactory.local`)
    priority: 10
    services:
    - name: env-prodlike
      namespace: env-prodlike
      port: 443
  tls:
    passthrough: true
